Bug 49571 - ODF Compatibility - styles.xml Error: unexpected attribute "text:enable-numbering"
Summary: ODF Compatibility - styles.xml Error: unexpected attribute "text:enable-numbe...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL: http://wiki.documentfoundation.org/im...
Whiteboard: odf odf_validation target:3.7.0 targe...
Keywords:
: 49877 (view as bug list)
Depends on:
Blocks: 49569
  Show dependency treegraph
 
Reported: 2012-05-07 01:07 UTC by Rainer Bielefeld Retired
Modified: 2023-08-02 22:25 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
original document (86.33 KB, application/vnd.oasis.opendocument.presentation)
2012-05-07 08:33 UTC, Stephan Bergmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-05-07 01:07:02 UTC
Steps how to reproduce with parallel installation of Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 35ec153]" (tinderbox: Win-x86@6-fast, pull time 2012-05-02 06:53:41)

1. download Sample document from URL
2. Open with LibO and save under new with enabled Menu 'Tools -> Options -> 
   Load/Save -> General - ODF Format Version = 1.2 Extended' 
3. Start Validator <http://odf-validator.rhcloud.com/> and validate document 
   with Autodetct for ODF version.
   Expected: compatible
   Actual: Bergmann-makecheck_360.odp/styles.xml[2,72857]: 
            Error: unexpected attribute "text:enable-numbering"
           Bergmann-makecheck_360.odp/content.xml[2,6376]: 
            Error: unexpected attribute "text:enable-numbering"

Plausibility of Validator error messages: I can not check
Comment 1 Rainer Bielefeld Retired 2012-05-07 03:32:33 UTC
The problem is 
+ confirmed by validator <http://officeshots.org/> Officeotron
- unconfirmed by validator <http://officeshots.org/> Cyclone
- unconfirmed by validator <http://officeshots.org/> ODFToolkit
Comment 2 Thorsten Behrens (allotropia) 2012-05-07 06:12:27 UTC
@stephan - weird, can't see where we'd generate that attribute - preserved as "alien attribute" from some template document, maybe?
Comment 3 Stephan Bergmann 2012-05-07 08:33:13 UTC
Created attachment 61142 [details]
original document

@thorsten: the Bergmann-makecheck_360.odp was originally created by modifying the attached template.odp
Comment 4 Thorsten Behrens (allotropia) 2012-05-07 09:06:53 UTC
Urgh, from meta.xml:

Generator: OpenOffice.org/2.3$Linux OpenOffice.org_project/680m6$Build-9226

That's quite old, no idea if that was vanilla or not - question is, do we need, or want, to preserve those attributes or not?
Comment 5 Rodolfo 2012-08-02 05:52:44 UTC
I've found this:

"while writing the numbering erata I found an undocumented property text:enable-numbering used by OpenOffice.org and Lotus Symphony."[1]

It was never accepted on ODF, but somehow those suites used this.

http://markmail.org/search/?q=enable-numbering&q=list%3Aorg.oasis-open.lists.office#query:enable-numbering%20list%3Aorg.oasis-open.lists.office+page:1+mid:qdmocfdslfhc2nbi+state:results

[1] https://lists.oasis-open.org/archives/office/200804/msg00202.html
Comment 6 Michael Stahl 2012-09-14 10:04:01 UTC
*** Bug 49877 has been marked as a duplicate of this bug. ***
Comment 7 Michael Stahl 2012-09-14 13:06:27 UTC
thanks for the links  Rodolfo; if i interpret the mails and
especially this correctly:

https://lists.oasis-open.org/archives/office/200410/msg00039.html

then the attribute is entirely obsolete in ODF (it has never been in ODF).

the import was changed to turn it into an alien attribute
for OOo 3.0 in CWS impressodf12:
 5b364c2e8baf9b1f6bbe611c0fd6895a88056afc

as Thorsten observed correctly it cannot be written in a new
document created from scratch in any case since the above change.
this may cause older OOo (2.x) versions to wrongly display the
document (maybe a change was made on the 2.4 release branch
to handle this, i'm far too lazy to check that), but that would
then be a problem in existence since OOo 3.0.

furthermore if a user edits the document to add/remove
lists the "enable-numbering" that was read may become
actually wrong and misleading, because it cannot be updated
as an alien attribute.

so it seems to me there is not really a good reason for the current
implementation of this attribute in this day and age,
it should simply be ignored on import.
Comment 8 Not Assigned 2012-09-14 13:10:13 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9a081484321b3f42bee3b43d18c4bd75b9603b01

fdo#49571: ODF import: ignore "text:enable-numbering" attribute



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Not Assigned 2012-09-17 08:04:55 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1f728eea3185856c39ef5bb4b7e3da8986f2ebdf&g=libreoffice-3-6

fdo#49571: ODF import: ignore "text:enable-numbering" attribute


It will be available in LibreOffice 3.6.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.