remove dead CTF_ALIEN_ATTRIBUTE_IMPORT

ever since
    commit 9a081484321b3f42bee3b43d18c4bd75b9603b01
    Date:   Fri Sep 14 13:42:47 2012 +0200
    fdo#49571: ODF import: ignore "text:enable-numbering" attribute

Change-Id: Id90b9aa0feafc3d7427558d3a2394c4958111434